2001-11-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/SocketCmd.java (cmdProc): Use the
	Util.getInt() method to parse socket port numbers so
	that we are compatible with Tcl error messages.
	Avoid wrapping code in try blocks that catch Exception.
	Set the interpreter result to String directly
	instead of creating a TclString inline.

2001-11-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/StdChannel.java (open): Set
	channel names to stdin, stdout, and stderr instead
	of file0, file1, and file2.
	* src/jacl/tcl/lang/TclIO.java (getChannel,
	getNextDescriptor): Remove aliases for stdin, stdout,
	and stderr. When getting a descriptor prefixed with
	"file" but sure the first one we return is "file3".

2001-11-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/PutsCmd.java:
	* src/jacl/tcl/lang/ReadCmd.java: Reformat comments
	to make use Java style // instead of C style /**/.

2001-11-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (write): Remove
	trailing "." from error message since it is not
	compatible with Tcl error message.
	* src/jacl/tcl/lang/FblockedCmd.java (cmdProc):
	* src/jacl/tcl/lang/GetsCmd.java (cmdProc):
	* src/jacl/tcl/lang/PutsCmd.java (cmdProc):
	* src/jacl/tcl/lang/ReadCmd.java (cmdProc):
	Remove mode check that belongs in Channel methods.

2001-11-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ServerSocketChannel.java (errorMsg)
	Remove unused errorMsg member.
	* src/jacl/tcl/lang/SocketChannel.java (SocketChannel,
	close): Set channel mode to TclIO.RDWR to indicate that
	reading and writing are allowed on socket. Set errorMsg
	member if an exception was raised during close.
	* src/jacl/tcl/lang/SocketCmd.java (cmdProc): Create
	SocketChannel with TclIO.RDWR mode to indicate that
	reading and writing are allowed on socket.

2001-11-20  Mo DeJong  <mdejong@users.sourceforge.net>
